Fix overflow for index page

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,13 +1,14 @@
 content{
-    width: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
+
     position: relative;
+
     /*position: absolute;*/
-    margin-top: 100px;
+    /* margin-top: 100px; */
 
     overflow-y: hidden;
     display: block;
-    /*left: 30%;*/
-    /*z-index:100;*/
 }
 
 #content-name{
